--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
                         <li><a href="{{url_for("index")}}">Home</a></li>
                         <li><a href="{{url_for("about_tt")}}">About</a></li>
                         <li><a href="{{url_for("game")}}">Tres Tigres</a></li>
-                        <li><a href="{{url_for("corpus")}}">TwitUrban Dictionary</a></li>
+                        <li><a href="{{url_for("corpus")}}">The TwitUrban Dictionary</a></li>
                         <li><a href="{{url_for('linguist_info')}}">Information for Linguists</a></li>
                         <!-- want these three on the right-hand side -->
                         <li><a href="{{url_for("signin")}}">Sign In</a></li>
