Added link to tagging guide

--- a/templates/corpus_download_main.html
+++ b/templates/corpus_download_main.html
@@ -12,6 +12,11 @@
 	</h3>
 </p>
 <p>
+	<h2>For information about the part of speech tags:</h2>
+
+		<p><h3><a href="{{url_for('guide')}}">Guide to the part of speech tags</a></h3></p>
+</p>
+<p>
 	<h4>If you'd like to access <i>The TwitUrban Dictionary</i> in a different format, please <a href="{{url_for('contact_me')}}">contact me.</a>
 </p>
 {% endblock %}
