Adding technical info section

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,6 +16,9 @@
 <p>
 	<h2><a href ="{{url_for('linguist_info')}}">Information for Linguists</a></h2>
 </p>
+<p>
+	<h2><a href="">Technical Information About The MATC Project</a></h2>
+</p>
 {% endblock %}
 
 
