Cleaned up wording.

--- a/templates/about_tt.html
+++ b/templates/about_tt.html
@@ -6,12 +6,12 @@
 			<p>Tres Tigres is a crowdsourced part of speech tagging game.</p>
 			<!-- talk about madlibs etc -->
 		<h3>How do I play?</h3>
-			<p></p>
+			<p>You shall see...</p>
 			<!-- first you have to register (link) -->
 			<!-- after registering, sign in -->
 			<!-- then you can begin playing -->
 		<h3>Do I need linguistic training to play?</h3>
-			<p>Nope! The whole idea behind The Manually Annotated Twitter Corpus Project is to allow linguistic data to be annotated by people with little or no training in linguistics. You don't need to know anything about morphemes or syntax; you just need to be a fluent or native speaker of English who enjoys MadLibs!</p>
+			<p>Nope! The whole idea behind The Manually Annotated Twitter Corpus Project is to allow linguistic data to be annotated by people with little or no training in linguistics. You don't need to know anything about morphemes or syntax; you just need to be a native or fluent speaker of English who enjoys MadLibs!</p>
 			<!-- add tm for madlibs, etc -->
 		<h3>Why the name 'Tres Tigres'?</h3>
 			<p>Why not? O.o</p>
