Added technical info section and link

--- a/templates/info_for_linguists.html
+++ b/templates/info_for_linguists.html
@@ -15,5 +15,7 @@
 			<p>Please <a href="{{url_for('contact_me')}}">contact me</a> with any specific needs.</p>
 		<h3>Do you have something like this for other languages?</h3>
 			<p>Not currently. I'd love to, though. If you have linguistic expertise in another language and want to help design a MATC-type of project in that language with me, I'd love to <a href="{{url_for('contact_me')}}">hear from you!</a></p>
+		<h3>I'm a computational linguist/I'd like to look at your code.</h3>
+			<p>All of the technical information about The MATC Project is on <a href="https://github.com/rebeccastandig/TheMATCProject">my GitHub repository</a>.</p>
 </p>
 {% endblock %}
