--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -4,6 +4,7 @@
 	<h2>Contact me</h2>
 </p>
 <p>
+	<!-- some kind of short bio here -->
 	<h3>Tweet at me: <a href="http://www.twitter.com/understandig">@understandig</a></h3>
 	<h3>Email me: </h3>
 	<!-- figure out email things -->
