Updated other languages section

--- a/templates/info_for_linguists.html
+++ b/templates/info_for_linguists.html
@@ -14,7 +14,7 @@
 		<h3>I want to access <i>The TwitUrban Dictionary</i> in a different format.</h3>
 			<p>Please <a href="{{url_for('contact_me')}}">contact me</a> with any specific needs.</p>
 		<h3>Do you have something like this for other languages?</h3>
-			<p>Not currently. I'd love to, though. If you have linguistic expertise in another language and want to help design a MATC-type of project in that language with me, I'd love to <a href="{{url_for('contact_me')}}">hear from you!</a></p>
+			<p>Not currently. If you have expertise (or are a native speaker) in another language and want to help design a project in that language with me, I'd love to <a href="{{url_for('contact_me')}}">hear from you!</a> I'd especially love to work on an endangered or underrepresented language project.</p>
 		<h3>I'm a computational linguist/I'd like to look at your code.</h3>
 			<p>All of the technical information about The MATC Project is on <a href="https://github.com/rebeccastandig/TheMATCProject">my GitHub repository</a>.</p>
 </p>
