--- a/templates/about_faqs.html
+++ b/templates/about_faqs.html
@@ -17,7 +17,7 @@
 
 			<p>For more information on who I am or why I did this (or to hire me!), please <a href="{{url_for('contact_me')}}">contact me.</a></p>
 		<h3>Can I look at the code for all of this/Can you give me some more technical information?</h3>
-			<p>Sure! All of the code for The MATC Project is available on my <a href="https://github.com/rebeccastandig/TheMATCProject">GitHub repository</a>.</p>
+			<p>Sure! All of the code for The MATC Project is available on <a href="https://github.com/rebeccastandig/TheMATCProject">my GitHub repository</a>.</p>
 		<h3>I'm a linguist/I have linguistics-related questions about The MATC Project.</h3>
 			<p>Great! Please go to the <a href="{{url_for('linguist_info')}}">Information for Linguists</a> section.</p>
 </p>
