--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
                         <li><a href="{{url_for("game")}}">Tres Tigres</a></li>
                         <li><a href="{{url_for("corpus")}}">The TwitUrban Dictionary</a></li>
                         <li><a href="{{url_for('linguist_info')}}">Information for Linguists</a></li>
+                        <li><a href="{{url_for('contact_me')}}">Contact Information</a></li>
                         <!-- want these three on the right-hand side -->
                         <li><a href="{{url_for("signin")}}">Sign In</a></li>
                         <li><a href="{{url_for('register')}}">Register</a></li>
@@ -25,11 +26,12 @@
         </div>
         <div class="container">
             <h1>The Manually Annotated Twitter Corpus Project</h1>
-            <ul>
+            <p>
+                <!-- have messages pop up in window? -->
             {% for message in get_flashed_messages() %}
-            <li>{{message}}</li>
+            <h4>{{message}}</h4>
             {% endfor %}
-            </ul>
+            </p>
             <p>
             {% block body %}
             {% endblock %}
