--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block body %}
 <p>
-	<h2>Contact me</h2>
+	<h2>Contact Me</h2>
 </p>
 <p>
 	<!-- some kind of short bio here -->
