--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,20 @@
 {% extends 'base.html' %}
 {% block body %}
 <p>
-	<h2>Register</h2>
+	<p><h2>Register a new account</h2></p>
+
+	<div class="form">
+		<form method="POST">
+            <p>User name and password must each be 6-15 alphanumeric characters (A-Z, a-z, 0-9).</p>
+            <p><input type="text" placeholder="User Name" name="name"></p>
+            <p><input type="password" placeholder="Password" name="pw"></p>
+            <p><input type="password" placeholder="Verify Password" name="verify_pw"></p>
+            <p><input type="submit" value="Register"></p>
+        </form>
+    </div>
 </p>
+</p>
+	<h3><a href="{{url_for('signin')}}">Already have an account?</a></h3>
 {% endblock %}
 
 
