--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,4 +1,10 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block body %}
 <h2>Sign In</h2>
+<p><form method="post">
+ 	<p><input type="text" name="name" placeholder="User Name"></p>
+	<p> <input type="password" name="pw" placeholder="Password"></p>
+    <p><input type="submit" value="Sign In"></p>
+</form></p>
+<h3><a href="{{url_for('register')}}">Need to register for a new account?</a></h3>
 {% endblock %}
