--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
         <title>The MATC Project</title>
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-        <script type="text/javascript" src="/static/js/bootstrap.js"></script>
-        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
     </head>
     <body>
+        <div class="navigation">
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="container">
@@ -24,6 +24,7 @@
                 </div>
             </div>
         </div>
+    </div>
         <div class="container">
             <h1>The Manually Annotated Twitter Corpus Project</h1>
             <p>
@@ -40,5 +41,12 @@
         <div class="bottom">
             <!-- copyright, thanks, etc -->
         </div>
+         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+        <script type="text/javascript" src="/static/js/emoji.js"></script>
+        <script type="text/javascript">
+            $('.emoji').emoji(20); // Set the size for rendering here
+        </script>
+        {% block javascript %}
+        {% endblock %}
     </body>
 </html>
