--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
         <title>The MATC Project</title>
+        <link rel="stylesheet" href="/static/css/localcss.css">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     </head>
     <body>
