--- a/templates/about_ttud.html
+++ b/templates/about_ttud.html
@@ -1,10 +1,13 @@
 {% extends 'base.html' %}
+{% block header %}
+<p><b>{{logged_in}}</b>
+	<a href="{{url_for('logout')}}">{{not_you}}</a></p>
+{% endblock %}
 {% block body %}
 <p>
 	<h2>About <i>The TwitUrban Dictionary</i></h2>
 	<h3>What is <i>The TwitUrban Dictionary</i>?</h3>
 			<p><i>The TwitUrban Dictionary</i> is a crowdsourced, manually annotated corpus of words pulled from Twitter. It is constantly updating.</p>
-			<!-- want to be able to do stuff with my text here :( -->
 			<p>You can <a href="{{url_for('corpus_browse')}}">browse</a> <i>The TwitUrban Dictionary</i> online, or you can <a href="{{url_for('corpus_download')}}">download</a> it onto your own computer.</p>
 		<h3>Do I need to sign up or pay to download it?</h3>
 			<p>No. You don't need an account to access <i>The TwitUrban Dictionary</i>. Anyone can download <i>The TwitUrban Dictionary</i>, free of cost.</p>
