--- a/templates/browse_list_words.html
+++ b/templates/browse_list_words.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% block header %}
+<p><b>{{logged_in}}</b>
+	<a href="{{url_for('logout')}}">{{not_you}}</a></p>
+{% endblock %}
 {% block body %}
 {% for tag in tag_list %}
 <p>
