Added email info

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -10,8 +10,7 @@
 <p>
 	<!-- some kind of short bio here -->
 	<h3>Tweet at me: <a href="http://www.twitter.com/understandig">@understandig</a></h3>
-	<h3>Email me: </h3>
-	<!-- figure out email things -->
+	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
 	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig">rebeccastandig</a></h3>
 	<h3>Or feel free to fill this out:</h3>
 	<!-- insert form here -->
