Added in icons for Tres Tigres and The Twiturban Dictionary

--- a/templates/about.html
+++ b/templates/about.html
@@ -9,10 +9,10 @@
 	<h2><a href="{{url_for('abt_matc')}}">About The Manually Annotated Twitter Corpus Project</a></h2>
 </p>
 <p>
-	<h2><a href="{{url_for('abt_tt')}}">About Tres Tigres</a></h2>
+	<h2><a href="{{url_for('abt_tt')}}">About Tres Tigres <image src="/static/img/3tigers.png" width='50' height='100'></a></h2>
 </p>
 <p>
-	<h2><a href="{{url_for('abt_ttud')}}">About <i>The TwitUrban Dictionary</i></a></h2>
+	<h2><a href="{{url_for('abt_ttud')}}">About <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='25' height='20'></a></h2>
 </p>
 <p>
 	<h2><a href="{{url_for('abt_faqs')}}">Frequently Asked Questions</a></h2>
