--- a/templates/about_matc.html
+++ b/templates/about_matc.html
@@ -9,7 +9,7 @@
 	<h3>What is The Manually Annotated Twitter Corpus Project?</h3>
 			<p>The Manually Annotated Twitter Corpus Project (a.k.a. The MATC Project) is a crowdsourced part of speech tagging game that results in a corpus of words sourced from Twitter.</p>
 			<h4>But what does that even <i>mean</i>?</h4>
-				<p>Basically, there's two parts to The MATC Project: <a href="{{url_for('abt_tt')}}">Tres Tigres</a>, and <a href="{{url_for('abt_ttud')}}"><i>The TwitUrban Dictionary</i></a>.</p>
+				<p>Basically, there's two parts to The MATC Project: <a href="{{url_for('abt_tt')}}">Tres Tigres <image src="/static/img/3tigers.png" width='50' height='100'></a>, and <a href="{{url_for('abt_ttud')}}"><i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='20' height='20'></a>.</p>
 	<h3><a href="https://github.com/rebeccastandig/TheMATCProject">Technical Information</a></h3>
 </p>
 {% endblock %}
