--- a/templates/about_tt.html
+++ b/templates/about_tt.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2>About Tres Tigres</h2>
-		<h3>What is Tres Tigres?</h3>
+	<h2>About Tres Tigres <image src="/static/img/3tigers.png" width='100' height='100'></h2>
+		<h3>What is Tres Tigres<image src="/static/img/3tigers.png" width='50' height='100'>?</h3>
 			<p>Tres Tigres is a crowdsourced part of speech tagging game.</p>
 			<!-- talk about madlibs etc -->
 		<h3>How do I play?</h3>
