--- a/templates/about_ttud.html
+++ b/templates/about_ttud.html
@@ -5,8 +5,8 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2>About <i>The TwitUrban Dictionary</i></h2>
-	<h3>What is <i>The TwitUrban Dictionary</i>?</h3>
+	<h2>About <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='20' height='20'></h2>
+	<h3>What is <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='15' height='20'>?</h3>
 			<p><i>The TwitUrban Dictionary</i> is a crowdsourced, manually annotated corpus of words pulled from Twitter. It is constantly updating.</p>
 			<p>You can <a href="{{url_for('corpus_browse')}}">browse</a> <i>The TwitUrban Dictionary</i> online, or you can <a href="{{url_for('corpus_download')}}">download</a> it onto your own computer.</p>
 		<h3>Do I need to sign up or pay to download it?</h3>
