--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
                     <ul class="nav">
                         <li><a href="{{url_for("index")}}">Home</a></li>
                         <li><a href="{{url_for("about_tt")}}">About</a></li>
-                        <li><a href="{{url_for("game")}}">Tres Tigres</a></li>
-                        <li><a href="{{url_for("corpus")}}">The TwitUrban Dictionary</a></li>
+                        <li><a href="{{url_for("game")}}">Tres Tigres <image src="/static/img/3tigers.png" width='25' height='50'></a></li>
+                        <li><a href="{{url_for("corpus")}}">The TwitUrban Dictionary <image src="/static/img/dictionary.png" width='10' height='20'></a></li>
                         <li><a href="{{url_for('linguist_info')}}">Information for Linguists</a></li>
                         <li><a href="{{url_for('contact_me')}}">Contact Information</a></li>
                         <!-- want these three on the right-hand side -->
