--- a/templates/corpus.html
+++ b/templates/corpus.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2><i>The TwitUrban Dictionary</i></h2>
+	<h2><i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='25' height='20'></h2>
 </p>
 <p>
 	<h3><a href="{{url_for('corpus_download')}}">If you want to download</a></h3>	
