--- a/templates/corpus_download_main.html
+++ b/templates/corpus_download_main.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2> You can download <i>The TwitUrban Dictionary</i> in two formats:</h2>
+	<h2> You can download <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='25' height='20'> in two formats:</h2>
 </p>
 <p>
 	<h3>
@@ -21,7 +21,7 @@
 		<p><h3><a href="{{url_for('guide')}}">Guide to the part of speech tags</a></h3></p>
 </p>
 <p>
-	<h4>If you'd like to access <i>The TwitUrban Dictionary</i> in a different format, please <a href="{{url_for('contact_me')}}">contact me.</a>
+	<h4>If you'd like to access <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='15' height='20'> in a different format, please <a href="{{url_for('contact_me')}}">contact me.</a>
 </p>
 {% endblock %}
 
