--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
 <h2>Welcome to The MATC Project!</h2>
 <h3>
 	Feel free to take a look around.<br>
-	<a href="{{url_for('game')}}">Play Tres Tigres</a><br>
-	<a href="{{url_for('corpus')}}">Browse or download <i>The TwitUrban Dictionary</i></a><br>
+	<a href="{{url_for('game')}}">Play Tres Tigres<image src="/static/img/3tigers.png" width='40'></a><br>
+	<a href="{{url_for('corpus')}}">Browse or download <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='15'></a><br>
 	<a href="{{url_for('about_tt')}}">Find out more about The MATC Project</a><br>
 	<a href="{{url_for('contact_me')}}">Contact Information</a></br>
 </p>
