--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -9,9 +9,9 @@
 </p>
 <p>
 	<!-- some kind of short bio here -->
-	<h3>Tweet at me: <a href="http://www.twitter.com/understandig">@understandig</a></h3>
+	<h3>Tweet at me: <a href="http://www.twitter.com/understandig" target="_blank">@understandig</a></h3>
 	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
-	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig">rebeccastandig</a></h3>
+	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig" target="_blank">rebeccastandig</a></h3>
 	<h3>Or feel free to fill this out:</h3>
 	<!-- insert form here -->
 </p>
