--- a/templates/game.html
+++ b/templates/game.html
@@ -9,7 +9,9 @@
 {% endblock %}
 {% block body %}
 <div class='tiger'>
-<h2>Tres Tigres</h2>
+<h2>Tres Tigres
+<image src="/static/img/3tigers.png" width='100' height='100'>
+</h2>
 	
 <div class="gamebox">
 	<p>
@@ -28,7 +30,7 @@
 			</button>
 		</p>
 </div>
-<table border="0" cellpadding="20">
+<table class="tigertable" border="0" cellpadding="20">
 	<tr>
 		<td>
 		{% for tag_sent in first_half %}
