--- a/templates/info_for_linguists.html
+++ b/templates/info_for_linguists.html
@@ -15,7 +15,7 @@
 		<!-- make link open in new window? -->
 		<h3>Can you explain what each tag means?</h3>
 			<p>Please see the <a href="{{url_for('guide')}}">guide to the part of speech tags.</a></p>
-		<h3>I want to access <i>The TwitUrban Dictionary</i> in a different format.</h3>
+		<h3>I want to access <i>The TwitUrban Dictionary</i><image src="/static/img/dictionary.png" width='15' height='20'> in a different format.</h3>
 			<p>Please <a href="{{url_for('contact_me')}}">contact me</a> with any specific needs.</p>
 		<h3>Do you have something like this for other languages?</h3>
 			<p>Not currently. If you have expertise (or are a native speaker) in another language and want to help design a project in that language with me, I'd love to <a href="{{url_for('contact_me')}}">hear from you!</a> I'd especially love to work on an endangered or underrepresented language project.</p>
