Changed github links to open in new window

--- a/templates/about_faqs.html
+++ b/templates/about_faqs.html
@@ -8,20 +8,16 @@
 		<h2>Frequently Asked Questions</h2>
 			<h3>How do I register?</h3>
 			<p>Registration is simple! Just <a href="{{url_for('register')}}">click here.</a></p>
-		<h3>I lost my password. What should I do?</h3>
-			<p></p>
-		<!-- link to retrieve pw? -->
-		<!-- link to reset pw -->
-		<h3>How do I reset my password?</h3>
-			<p></p>
-		<!-- link to reset pw -->
-		<h3>Who created The MATC Project?</h3>
-			<p>My name is <a href="http://twitter.com/understandig">Rebecca Standig.</a> I created The MATC Project as part of my studies at <a href="http://www.hackbrightacademy.com">Hackbright Academy.</a></p>
-			<!-- make link open in another window -->
 
+		<h3>Does your site use cookies?</h3>
+		<p>Yes, but only if you're logged in.</p>
+		<h3>I lost my password. What should I do?</h3>
+			<p>Unfortunately, you'll have to <a href="{{url_for('register')}}">create a new account</a>.</p>
+		<h3>Who created The MATC Project?</h3>
+			<p>My name is <a href="http://twitter.com/understandig">Rebecca Standig.</a> I created The MATC Project as part of my studies at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy.</a></p>
 			<p>For more information on who I am or why I did this (or to hire me!), please <a href="{{url_for('contact_me')}}">contact me.</a></p>
 		<h3>Can I look at the code for all of this/Can you give me some more technical information?</h3>
-			<p>Sure! All of the code for The MATC Project is available on <a href="https://github.com/rebeccastandig/TheMATCProject">my GitHub repository</a>.</p>
+			<p>Sure! All of the code for The MATC Project is available on <a href="https://github.com/rebeccastandig/TheMATCProject" target="_blank">my GitHub repository</a>.</p>
 		<h3>I'm a linguist/I have linguistics-related questions about The MATC Project.</h3>
 			<p>Great! Please go to the <a href="{{url_for('linguist_info')}}">Information for Linguists</a> section.</p>
 </p>
