--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
         <title>The MATC Project</title>
         <link rel="stylesheet" href="/static/css/localcss.css">
         <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+        <link rel="icon" href="/static/img/3tigers.png" type="image/x-icon">
     </head>
     <body>
         <div class="navigation">
