--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
 	<h2><a href ="{{url_for('linguist_info')}}">Information for Linguists</a></h2>
 </p>
 <p>
-	<h2><a href="https://github.com/rebeccastandig/TheMATCProject">Technical Information About The MATC Project</a></h2>
+	<h2><a href="https://github.com/rebeccastandig/TheMATCProject" target="_blank">Technical Information About The MATC Project</a></h2>
 </p>
 {% endblock %}
 
