--- a/templates/about_tt.html
+++ b/templates/about_tt.html
@@ -5,20 +5,19 @@
 {% endblock %}
 {% block body %}
 <p>
-	<h2>About Tres Tigres <image src="/static/img/3tigers.png" width='100' height='100'></h2>
-		<h3>What is Tres Tigres<image src="/static/img/3tigers.png" width='50' height='100'>?</h3>
+	<h2>About Tres Tigres <image src="/static/img/3tigers.png" width='100'></h2>
+		<h3>What is Tres Tigres<image src="/static/img/3tigers.png" width='50'>?</h3>
 			<p>Tres Tigres is a crowdsourced part of speech tagging game.</p>
 			<!-- talk about madlibs etc -->
 		<h3>How do I play?</h3>
-			<p>You shall see...</p>
-			<!-- first you have to register (link) -->
-			<!-- after registering, sign in -->
-			<!-- then you can begin playing -->
+			<p> If you haven't already, first you'll have to <a href="{{url_for('register')}}">register</a> and <a href="{{url_for('signin')}}">sign in</a>.<br>
+			</p>
 		<h3>Do I need linguistic training to play?</h3>
-			<p>Nope! The whole idea behind The Manually Annotated Twitter Corpus Project is to allow linguistic data to be annotated by people with little or no training in linguistics. You don't need to know anything about morphemes or syntax; you just need to be a native or fluent speaker of English who enjoys MadLibs!</p>
-			<!-- add tm for madlibs, etc -->
-		<h3>Why the name 'Tres Tigres'?</h3>
-			<p>Why not? O.o</p>
+			<p>Nope! The whole idea behind The Manually Annotated Twitter Corpus Project is to allow linguistic data to be annotated by people with little or no training in linguistics. You don't need to know anything about morphemes or syntax; you just need to be a native or fluent speaker of English who enjoys MadLibs™!</p>
+		<h3>What does 'Tres Tigres' mean? Why the name 'Tres Tigres'? </h3>
+			<p>'Tres Tigres' means 'three tigers' in Spanish. As for why I chose it, I like tigers and tongue twisters. There's a fun tongue twister in Spanish about three tigers: 'Tres tristes tigres tragaban trigo en tres tristes trastos sentados tras un trigal. Sentados tras un trigal, en tres tristes trastos tragaban trigo tres tristes tigres.'</p>
+			
+			<p>Also I like inside jokes.</p>
 
 </p>
 {% endblock %}
