--- a/templates/user_and_top_points.html
+++ b/templates/user_and_top_points.html
@@ -15,9 +15,9 @@
 	{% endfor %}
 {% endblock %}
 {% block body %}
-<table border="4" width="50%" cellpadding="2">
+<table  border="4" width="50%" cellpadding="2">
 	<tr>
-		<th colspan="2"><h2>Top 25 Scores</h2></th>
+		<th colspan="2" align="center"><h2>Top 25 Scores</h2></th>
 	</tr>
 	<tr>
 		<th><h3>Name</h3></th>
