Added POS tag info.

--- a/templates/pos_guide.html
+++ b/templates/pos_guide.html
@@ -10,4 +10,90 @@
 <p>
 	<h3><a href="{{url_for('dl_guide')}}">If you'd like to download this guide</a></h3>
 </p>
+<table border='4' width="50%" cellpadding="2">
+	<tr>
+		<th><h3>Tag</h3></th>
+		<th><h3>Meaning</h3></th>
+	</tr>
+	<tr>
+		<td>N</td>
+		<td>Noun</td>
+	</tr>
+	<tr>
+		<td>O</td>
+		<td>Pronoun</td>
+	</tr>
+	<tr>
+		<td>P</td>
+		<td>Proper Noun</td>
+	</tr>
+	<tr>
+		<td>M</td>
+		<td>Verbs, including modals</td>
+	</tr>
+	<tr>
+		<td>PV</td>
+		<td>Proper Noun + Verbal</td>
+	</tr>
+	<tr>
+		<td>NV</td>
+		<td>Nominal + Verbal</td>
+	</tr>
+	<tr>
+		<td>Z</td>
+		<td>Proper Noun + Possessive</td>
+	</tr>
+	<tr>
+		<td>OP</td>
+		<td>Possessive Pronoun</td>
+	</tr>
+	<tr>
+		<td>J</td>
+		<td>Adjective</td>
+	</tr>
+	<tr>
+		<td>A</td>
+		<td>Adverb</td>
+	</tr>
+	<tr>
+		<td>S</td>
+		<td>Nominal + Possessive</td>
+	</tr>
+	<tr>
+		<td>I</td>
+		<td>Interjection</td>
+	</tr>
+	<tr>
+		<td>D</td>
+		<td>Determiner</td>
+	</tr>
+	<tr>
+		<td>V</td>
+		<td>Verb Particle (not a phrasal verb)</td>
+	</tr>
+	<tr>
+		<td>C</td>
+		<td>Coordinating Conjunction</td>
+	</tr>
+	<tr>
+		<td>E</td>
+		<td>Existential 'there'</td>
+	</tr>
+	<tr>
+		<td>PD</td>
+		<td>Predeterminer</td>
+	</tr>
+	<tr>
+		<td>EV</td>
+		<td>Existential 'there' + Verb</td>
+	</tr>
+	<tr>
+		<td>SC</td>
+		<td>Pre/Post Position/Subjunctive Conjunction</td>
+	</tr>
+	<tr>
+		<td>U</td>
+		<td>Undetermined</td>
+	</tr>
+</table>
 {% endblock %}
