--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -9,7 +9,7 @@
 </h2>
 
 <h2>How to Play</h2>
-<!-- if you've already read this button -->
+<h3><mark>Warning: Tweets may contain profanity or objectionable content. Tweets are not edited for content.</mark></h3>
 <h3> The game will look similar to this:
 <img src='/static/img/gameshot.png'>
 First, look at the word you're being asked to evaluate:
