--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -8,12 +8,11 @@
 	<h2>Contact Me</h2>
 </p>
 <p>
-	<!-- some kind of short bio here -->
+	<h4>My name is Rebecca Standig. I'm a software engineer in San Francisco, CA.<br> I studied linguistics at <a href="http://www.barnard.edu" target="_blank">Barnard College</a> and graduated in 2010.<br>
+	The Manually Annotated Twitter Corpus was my final project at <a href="http://www.hackbrightacademy.com" target="_blank">Hackbright Academy</a>.
 	<h3>Tweet at me: <a href="http://www.twitter.com/understandig" target="_blank">@understandig</a></h3>
 	<h3>Email me: <a href="mailto:rebeccastandig@gmail.com?subject=The MATC Project" target="_blank">rebeccastandig@gmail.com</a></h3>
 	<h3>Check out my GitHub: <a href="https://www.github.com/rebeccastandig" target="_blank">rebeccastandig</a></h3>
-	<h3>Or feel free to fill this out:</h3>
-	<!-- insert form here -->
 </p>
 {% endblock %}
 
