--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,6 @@
                         <li><a href="{{url_for("corpus")}}">The TwitUrban Dictionary <image src="/static/img/dictionary.png" width='8' height='20'></a></li>
                         <li><a href="{{url_for('linguist_info')}}">Information for Linguists</a></li>
                         <li><a href="{{url_for('contact_me')}}">Contact Information</a></li>
-                        <!-- want these three on the right-hand side -->
                         <li><a href="{{url_for("signin")}}">Sign In</a></li>
                         <li><a href="{{url_for('register')}}">Register</a></li>
                         <li><a href="{{url_for("logout")}}">Log Out</a></li>
@@ -35,7 +34,6 @@
             </p>
             
             <p>
-                <!-- have messages pop up in window? -->
             {% for message in get_flashed_messages() %}
             <h4>{{message}}</h4>
             {% endfor %}
@@ -43,15 +41,11 @@
             <p>
             {% block body %}
             {% endblock %}
-            </p>
-        </div>
-        <div class="bottom">
-            <!-- copyright, thanks, etc -->
         </div>
          <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="/static/js/emoji.js"></script>
         <script type="text/javascript">
-            $('.emoji').emoji(20); // Set the size for rendering here
+            $('.emoji').emoji(20);
         </script>
         {% block javascript %}
         {% endblock %}
