Added pos photo reference and links. Also added downloading

--- a/templates/pos_guide.html
+++ b/templates/pos_guide.html
@@ -8,7 +8,7 @@
 	<h2>Guide to the part of speech tags</h2>
 </p>
 <p>
-	<h3><a href="/static/files/posguide.csv" target="_blank">If you'd like to download this guide</a></h3>
+	<h3><a href="/static/files/posguide.csv" target="_blank">Download this guide</a></h3>
 </p>
 <table border='4' width="50%" cellpadding="2">
 	<tr>
