--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -9,6 +9,7 @@
 </h2>
 
 <h2>How to Play</h2>
+<h4><a href="/static/img/tutorial.png" download="tutorial.png">Download this tutorial</a></h4>
 <h3><mark>Warning: Tweets may contain profanity or objectionable content. Tweets are not edited for content.</mark></h3>
 <h3> The game will look similar to this:
 <img src='/static/img/gameshot.png'>
@@ -18,7 +19,7 @@ Then, look for it in the tweet given:
 <img src='/static/img/ex2.png'>
 If needed, you can always look at more tweets with the word in it.
 <img src='/static/img/ex3.png'>
-Based on how the word was used in the tweet, figure out which sentence below you would put it in. Each sentence corresponds to a different part of speech.
+Based on how the word was used in the tweet, figure out which sentence below you would put it in. Each sentence corresponds to a different part of speech. (See the <a href="{{url_for('photoref')}}">part of speech photo reference</a> if this confuses you.)
 <img src='/static/img/ex4.png'>
 It is very important to distinguish between parts of speech that are closely related.<br><br>
 For example, nouns vs proper nouns vs pronouns:<br>
