--- a/templates/game.html
+++ b/templates/game.html
@@ -12,7 +12,8 @@
 <h2>Tres Tigres
 <image src="/static/img/3tigers.png" width='100' height='100'>
 </h2>
-<h3><a href="{{url_for('howto')}}">Click here for the how to play tutorial</a></h3>
+<h3><a href="{{url_for('howto')}}">How to play tutorial</a>.</h3>
+<h3><a href="{{url_for('photoref')}}">Part of speech photo reference</a>.</h3>
 	
 <div class="gamebox">
 	<p>
